@@ -7,6 +7,7 @@
   use get_content_area() or vbox()
 * Differentiate between readonly file and directory in error messages
 * Fixed bug opening session file
+* A deleted profile stays deleted across sessions
 
 
 1.3.8 (04.02.2016):
